log
Thu 09 May 2024 03:05:05 PM UTC: 
 tests:  1|8
total_score: 0/70
822ae0f
Thu 09 May 2024 03:11:00 PM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
d4f2b73
Thu 09 May 2024 03:21:53 PM UTC: 
 treemap.c | 27 ++++++++++++++++++++-------
 1 file changed, 20 insertions(+), 7 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:16: error: unused variable ‘parent’ [-Werror=unused-variable]
   51 |     TreeNode * parent = NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
03bcbd6
